mpeg2dec: Fix lowres 3

Fixes ticket212

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>